--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,10 @@ dependencies {
     implementation "androidx.navigation:navigation-compose:1.0.0-alpha09"
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-alpha05"
 
+
+
+
+
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
@@ -94,4 +98,12 @@ dependencies {
 
     //noinspection GradleCompatible
     implementation 'com.android.support:palette-v7:28.0.0'
+
+    // Room
+    def room_version = "2.3.0"
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+
+// Room Coroutines
+    implementation "androidx.room:room-ktx:$room_version"
 }
