--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,8 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
 
     implementation "androidx.lifecycle:lifecycle-livedata-core-ktx:2.3.1"
+    implementation 'nl.dionsegijn:konfetti:1.3.1'
+
 
 
 
@@ -103,6 +105,7 @@ dependencies {
     def room_version = "2.3.0"
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
+
 
 // Room Coroutines
     implementation "androidx.room:room-ktx:$room_version"
